Work on default layout.

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -5,10 +5,11 @@
 // @import 'motion-ui';
 
 @include foundation-global-styles;
-@include foundation-grid;
+// @include foundation-grid;
+@include foundation-flex-grid;
 @include foundation-typography;
-@include foundation-button;
-@include foundation-forms;
+// @include foundation-button;
+// @include foundation-forms;
 // @include foundation-visibility-classes;
 // @include foundation-float-classes;
 // @include foundation-accordion;
@@ -41,3 +42,8 @@
 
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
+
+@import 'other';
+@import 'shame';
+@import 'modules';
+@import 'layout';
