--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -38,6 +38,7 @@
 //  33. Tooltip
 //  34. Top Bar
 
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700,300);
 @import 'util/util';
 
 // 1. Global
@@ -46,26 +47,27 @@
 $global-width: rem-calc(1200);
 $global-font-size: 100%;
 $global-lineheight: 1.5;
-$primary-color: #2199e8;
-$secondary-color: #777;
+$primary-color: #4A90E2;
+$secondary-color: #F65757;
 $success-color: #3adb76;
 $warning-color: #ffae00;
 $alert-color: #ec5840;
-$light-gray: #e6e6e6;
-$medium-gray: #cacaca;
-$dark-gray: #8a8a8a;
-$black: #0a0a0a;
+$light-gray: #b2bbc3;
+$medium-gray: #8694a1;
+$dark-gray: #3c454e;
+$black: #1a1e22;
 $white: #fefefe;
-$body-background: $white;
-$body-font-color: $black;
-$body-font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+$body-background: #f5f6f7;
+$body-font-color: $dark-gray;
+$body-font-family: 'Roboto', sans-serif;
 $body-antialiased: true;
 $text-direction: ltr;
 $global-margin: 1rem;
 $global-padding: 1rem;
 $global-margin: 1rem;
-$global-weight-normal: normal;
-$global-weight-bold: bold;
+$global-weight-light: 300;
+$global-weight-normal: 400;
+$global-weight-bold: 700;
 $global-radius: 0;
 $global-text-direction: ltr;
 $rem-base: 16px;
@@ -89,12 +91,13 @@ $grid-row-width: $global-width;
 $grid-column-count: 12;
 $grid-column-gutter: 30px;
 $block-grid-max: 6;
+$global-flexbox: true;
 
 // 4. Base Typography
 // ------------------
 
 $header-font-family: $body-font-family;
-$header-font-weight: $global-weight-normal;
+$header-font-weight: $global-weight-light;
 $header-font-style: normal;
 $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 $header-sizes: (
@@ -527,4 +530,3 @@ $topbar-padding: 0.5rem;
 $topbar-background: #eee;
 $topbar-link-color: #fff;
 $topbar-input-width: 200px;
-
