--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -18,9 +18,9 @@
             <li class="NavigationListItem"><a href="{{root}}about.html">About</a></li>
             <li class="NavigationListItem"><a href="{{root}}contact.html">Contact</a></li>
           </ul>
-          <ul class="NavigationList">
+          <!-- <ul class="NavigationList">
             <li class="NavigationListItem"><a href="{{root}}work/mysidewalk.html">mySidewalk</a></li>
-          </ul>
+          </ul> -->
         </nav>
       </div>
       <div class="ContentContainer">
@@ -30,7 +30,11 @@
           </article>
         </main>
         <footer class="Footer" role="contentinfo">
-          <p>Footer</p>
+          <div class="row">
+            <div class="small-12 large-10 large-centered columns">
+              <p>Designed and coded by Zach Frank.</p>
+            </div>
+          </div>
         </footer>
       </div>
     </div>
