--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -5,8 +5,25 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ description }}">
-    <title>{{ title }}</title>
+    <title>{{ title }} • zfrankdesign</title>
     <link rel="stylesheet" href="{{root}}assets/css/styles.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="{{root}}assets/img/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="{{root}}assets/img/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{root}}assets/img/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{root}}assets/img/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{root}}assets/img/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="{{root}}assets/img/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="{{root}}assets/img/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="{{root}}assets/img/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{root}}assets/img/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="{{root}}assets/img/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{root}}assets/img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{root}}assets/img/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{root}}assets/img/icons/favicon-16x16.png">
+    <link rel="manifest" href="{{root}}assets/img/icons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="{{root}}assets/img/icons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <div class="Page">
@@ -14,13 +31,10 @@
         <nav class="Navigation" role="navigation">
           <ul class="NavigationList">
             <li class="NavigationListItem"><a href="/" class="NavigationLogo"><h1>Zach Frank</h1></a></li>
-            <li class="NavigationListItem"><a href="/">Work</a></li>
-            <li class="NavigationListItem"><a href="{{root}}about.html">About</a></li>
-            <li class="NavigationListItem"><a href="{{root}}contact.html">Contact</a></li>
+            <li class="NavigationListItem"><a href="/" {{#ifpage 'index'}}class="is-active"{{/ifpage}}>Work</a></li>
+            <li class="NavigationListItem"><a href="{{root}}about.html" {{#ifpage 'about'}}class="is-active"{{/ifpage}}>About</a></li>
+            <li class="NavigationListItem"><a href="{{root}}contact.html" {{#ifpage 'contact'}}class="is-active"{{/ifpage}}>Contact</a></li>
           </ul>
-          <!-- <ul class="NavigationList">
-            <li class="NavigationListItem"><a href="{{root}}work/mysidewalk.html">mySidewalk</a></li>
-          </ul> -->
         </nav>
       </div>
       <div class="ContentContainer">
@@ -32,7 +46,7 @@
         <footer class="Footer" role="contentinfo">
           <div class="row">
             <div class="small-12 large-10 large-centered columns">
-              <p>Designed and coded by Zach Frank.</p>
+              <p>Designed and coded by Zach Frank. <a href="{{root}}about.html">About</a> Zach. <a href="{{root}}contact.html">Contact</a> Zach.</p>
             </div>
           </div>
         </footer>
