--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ description }}">
-    <title>{{ title }} • zfrankdesign</title>
+    <title>{{ title }} • Zach Frank</title>
     <link rel="stylesheet" href="{{root}}assets/css/styles.css">
     <link rel="apple-touch-icon" sizes="57x57" href="{{root}}assets/img/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="{{root}}assets/img/icons/apple-icon-60x60.png">
