--- a/src/assets/scss/_modules.scss
+++ b/src/assets/scss/_modules.scss
@@ -192,7 +192,7 @@ ul {
 }
 
 .WorkDetailHeader {
-  margin-bottom: $grid-column-gutter; 
+  margin-bottom: $grid-column-gutter;
 }
 
 .work-caption {
@@ -206,6 +206,16 @@ ul {
   // border: 1px solid $light-gray;
   margin-bottom: $grid-column-gutter;
   width: 100%;
+}
+
+.pagination-next,
+.pagination-previous {
+  a {
+    transition: color, background-color .25s linear;
+    &:hover {
+      color: $white;
+    }
+  }
 }
 
 // Footer
